--- a/_config.yml
+++ b/_config.yml
@@ -283,8 +283,8 @@ display_categories: ["blockquotes"] # these categories will be displayed on the 
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Hogan]
+  first_name: [Emma, M.]
 
   style: apa
   locale: en
@@ -304,7 +304,7 @@ scholar:
   details_link: Details
 
   query: "@*"
-  group_by: year
+  group_by: type, year
   group_order: descending
 
 # Display different badges withs stats for your publications
