Add github repo with teaching materials from Fall 23

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -3,5 +3,7 @@ github_users:
 
 github_repos:
   - emmahogan/AndroidGEDPrep
+  - emmahogan/soci19f23
   - emmahogan/ThinkPython2_OfflineClassroom
   - emmahogan/emmahogan.github.io
+
